<?xml version="1.0"?>
<package format="2">
  <name>pi4_peristaltic_pump_driver</name>
  <version>1.0.0</version>
  <description>A ROS Driver for a custom liquid dispenser made using a relay, DAC and stepper powered peristaltic pump</description>

  <maintainer email="jglowa@liverpool.ac.uk">Jakub Glowacki</maintainer>

  <license>TODO</license>

  <!-- <url type="website">http://wiki.ros.org/driver_pps4102</url> -->

  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>kern_pcb_balance_driver</build_depend>
  <build_depend>kern_pcb_balance_msgs</build_depend>
  <build_depend>pi4_peristaltic_pump_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>kern_pcb_balance_driver</exec_depend>
  <exec_depend>kern_pcb_balance_msgs</exec_depend>
  <exec_depend>pi4_peristaltic_pump_msgs</exec_depend>
  <exec_depend>simple-pid</exec_depend>
  <exec_depend>roslaunch</exec_depend>
  <export>
  </export>
</package>
